<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >   

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:orientation="horizontal" >

        <TabWidget
            android:id="@+id/history_tab_call"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="@drawable/shape_gradient_gris_oscuro"
            android:orientation="horizontal" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:gravity="center"
                android:orientation="vertical" >

                <ImageView
                    android:id="@+id/imageView4"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:src="@drawable/icon_call_white" />

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="3dp"
                    android:text="@string/title_call"
                    android:textColor="@color/gris_claro"
                    android:textStyle="bold" />

            </LinearLayout>
            
        </TabWidget>

        <TabWidget
            android:id="@+id/history_tab_sms"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="@drawable/shape_gradient_cian"
            android:orientation="horizontal" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="@drawable/shape_gradient_gris_oscuro"
                android:gravity="center"
                android:orientation="vertical" >

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_weight="1"
                    android:src="@drawable/icon_sms_white" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:padding="3dp"
                    android:text="@string/title_sms"
                    android:textColor="@color/gris_claro"
                    android:textStyle="bold" />

            </LinearLayout>
            
        </TabWidget>

        <TabWidget
            android:id="@+id/history_tab_email"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="@drawable/shape_gradient_rosa"
            android:orientation="horizontal" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:gravity="center"
                android:orientation="vertical" >

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:src="@drawable/icon_email_white" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:padding="3dp"
                    android:text="@string/title_mail"
                    android:textColor="@color/gris_claro"
                    android:textStyle="bold" />

            </LinearLayout>
            
        </TabWidget>

        <TabWidget
            android:id="@+id/history_tab_sms_web"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="@drawable/shape_gradient_gris_oscuro" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="vertical" >

                <ImageView
                    android:id="@+id/ImageView01"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_weight="1"
                    android:src="@drawable/icon_sms_web_white" />

                <TextView
                    android:id="@+id/TextView01"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:padding="3dp"
                    android:text="@string/title_sms_web"
                    android:textColor="@color/gris_claro"
                    android:textStyle="bold" />

            </LinearLayout>

        </TabWidget>

    </LinearLayout>
    
      <LinearLayout
          android:layout_width="fill_parent"
          android:layout_height="5dp"
          android:background="@drawable/shape_gradient_rosa"
          android:orientation="vertical" >
	  
	</LinearLayout>

     <include
          android:id="@+id/action_list_item1"
          layout="@layout/listitem_contact_action" />

      <include layout="@layout/listitem_contact_action" />
      <include layout="@layout/listitem_contact_action" />
      <include layout="@layout/listitem_contact_action" />
      <include layout="@layout/listitem_contact_action" />
      <include layout="@layout/listitem_contact_action" />

</LinearLayout>